long URL wrapping bug

--- a/src/less/blocks/card.less
+++ b/src/less/blocks/card.less
@@ -58,6 +58,10 @@
   padding: @doubleSpace @doubleSpace 0 @doubleSpace;
   line-height: 1.4;
 
+  a {
+    word-break: break-word;
+  }
+
   p + p {
     margin-top: 1em;
   }
